# TState

./: .gitignore  CMakeLists.txt  Dockerfile  Doxyfile  LICENSE.md  README.md  compose.yml
src/: CMakeLists.txt  main.cpp
src/state_lab/: ConcreteStates.h  Events.h  IState.h  StateMachine.h
test/: CMakeLists.txt  main_test.cpp
